--- a/HappyRoutine-UI/src/app/components/post-components/post/post.component.css
+++ b/HappyRoutine-UI/src/app/components/post-components/post/post.component.css
@@ -34,7 +34,8 @@
 .post-icons i {
 	font-size: 1.8rem;
 	color: #868383;
-  margin-right: 3rem;
+  margin-right: 2rem;
+  margin-left: 2rem;
 }
 
 .post-user-info {
