--- a/HappyRoutine-UI/src/app/components/post-components/posts/posts.component.css
+++ b/HappyRoutine-UI/src/app/components/post-components/posts/posts.component.css
@@ -1,3 +1,138 @@
 .blogs {
   min-height: calc(100vh - 400px);
 }
+
+:host {
+  display:block;
+  margin-top: 1rem;
+}
+
+.feeds-content {
+	display: grid;
+	grid-template-columns: minmax(5rem, 1fr) 60rem 40rem minmax(5rem, 1fr);
+	grid-template-rows: repeat(2, min-content);
+  padding-top: 6.5rem;
+}
+
+.header-post input {
+	width: 35rem;
+	height: 3rem;
+	border: 0.1rem solid #d6e1e9;
+	border-radius: 3rem;
+	background-color: #d6e1e9;
+	padding: 0.4rem 1.5rem;
+}
+
+.feeds-page {
+	width: 100%;
+  height: 100vh;
+  border-left: 0.1rem solid #eee;
+  border-right: 0.1rem solid #eee;
+}
+
+
+.header-post i {
+	font-size: 2.5rem;
+	color: #1aa1f5;
+	margin: 1rem;
+}
+
+.posts {
+
+  grid-column: 1 / 3;
+	grid-row: 2 / -1;
+	background-color: #fff;
+
+}
+
+.post {
+	display: flex;
+	padding: 1.5rem;
+  border: 0.1rem solid #eee;
+  width: 100%;
+	height: 100%;
+}
+
+.post:hover{
+  background-color: #d6e1e9;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+
+}
+
+.user-avatar {
+	width: 6rem;
+	height: 6rem;
+	flex-shrink: 0;
+	margin-right: 1.5rem;
+}
+
+.user-avatar img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 50%;
+}
+
+.post-user-info {
+	display: flex;
+	align-items: center;
+	margin: 1rem 0;
+}
+
+.post-user-info h4 {
+	font-size: 1.6rem;
+	margin-right: 0.5rem;
+}
+
+.post-user-info i {
+	font-size: 1.6rem;
+	color: #1aa1f5;
+	margin-right: 0.5rem;
+}
+
+.post-user-info span {
+	font-size: 1.6rem;
+}
+
+.post-text {
+	font-size: 1.6rem;
+	margin-bottom: 1rem;
+}
+
+.post-img {
+	width: 48rem;
+	height: 30rem;
+}
+
+.post-img img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 1rem;
+}
+
+.post-icons {
+	margin-top: 1rem;
+}
+
+.post-icons i {
+	font-size: 1.8rem;
+	color: #868383;
+	margin-right: 3rem;
+}
+
+aside {
+  width: 40%;
+  padding-left: .5rem;
+  margin-left: .5rem;
+  float: right;
+  box-shadow: inset 5px 0 5px -5px #29627e;
+  font-style: italic;
+  color: #29627e;
+}
+
+
